renamed ci.yml to cicd.yml and renamed build stage to CI

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: CICD
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  CI:
     runs-on: ubuntu-latest
 
     strategy:
