--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,5 +26,8 @@ jobs:
           pip install ".[test]"
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
+      - name: Run pre-push hooks
+        run: |
+          pre-commit run --all-files --hook-stage pre-push
       - name: Run pytest
         run: pytest
