--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_install_hook_types:
   - pre-commit
   - pre-push
 
-default_stages: [commit]
+# default_stages: [commit]
 
 exclude: (docs|template)
 repos:
@@ -39,11 +39,13 @@ repos:
       - id: debug-statements
         description: "Check for debugger imports and py37+ `breakpoint()` calls in Python."
         stages:
-          - "push"
+          - "pre-push"
+          - "manual"
       - id: detect-private-key
         description: "Check for the existence of private keys."
         stages:
-          - "push"
+          - "pre-push"
+          - "manual"
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.3.0
@@ -54,7 +56,8 @@ repos:
           ["--strict", "--ignore-missing-imports", "--allow-untyped-decorators"]
         exclude: "tests"
         stages:
-          - "push"
+          - "pre-push"
+          - "manual"
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
@@ -68,4 +71,5 @@ repos:
         require_serial: true
         exclude: "tests"
         stages:
-          - "push"
+          - "pre-push"
+          - "manual"
