--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "wws"
+name = "woningwaarderingsstelsel"
 version = "0.1.0"
 description = "Berekent de punten van een woning m.b.v. het woningwaarderingstelsel."
 authors = [
@@ -11,9 +11,11 @@ authors = [
     { name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl" },
     { name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl" }
 ]
-keywords = ["woning", "waardering", "stelsel"]
+keywords = ["woning", "waardering", "stelsel", "woningwaarderingsstelsel", "wws"]
 classifiers = [
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.10"
