--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_install_hook_types:
   - pre-commit
   - pre-push
 
-# default_stages: [commit]
+default_stages: [commit]
 
 exclude: (docs|template)
 repos:
