Add generated Vera BVG models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ classifiers = [
 ]
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.10"
-
+dependencies = [
+    "pydantic==2.*",
+]
 [project.optional-dependencies]
 test = [
     "pre-commit==3.3.*",
