--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,7 @@ repos:
     rev: v1.3.0
     hooks:
       - id: mypy
+        additional_dependencies: [pydantic==2.*, types-requests==2.*]
         description: "Mypy is an optional static type checker for Python."
         args:
           ["--strict", "--ignore-missing-imports", "--allow-untyped-decorators"]
