--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.10"
 dependencies = [
     "pydantic==2.*",
+    "loguru==0.7.*",
 ]
 [project.optional-dependencies]
 test = [
