--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ default_install_hook_types:
 
 # default_stages: [commit]
 
-exclude: (wettelijke-documenten)
+exclude: (wettelijke-documenten|docs)
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
