changed pytest run command

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,4 +44,4 @@ jobs:
         run: pre-commit run --all-files --hook-stage pre-push
 
       - name: Run pytest
-        run: pytest
+        run: python -m pytest
