--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,8 +60,7 @@ repos:
             types-pyyaml==6.*,
           ]
         description: "Mypy is an optional static type checker for Python."
-        args:
-          ["--strict", "--ignore-missing-imports", "--allow-untyped-decorators"]
+        args: ["--ignore-missing-imports", "--allow-untyped-decorators"]
         exclude: "tests"
         stages:
           - "pre-push"
