code voor stelsel werkt. code voor stelselgroep moet aangepast worden zodat het de juiste config pakt en gebruikt maakt van de Config.load()

--- a/woningwaardering/config.yml
+++ b/woningwaardering/config.yml
@@ -1,27 +1,27 @@
 stelsels:
   zelfstandig:
-    begindatum: null
+    begindatum: 01-01-0001
     einddatum: 31-12-9999
 
     stelselgroepen:
       oppervlakte_van_vertrekken:
         class_naam: OppervlakteVanVertrekken
-        begindatum: null
+        begindatum: 01-01-0001
         einddatum: 31-12-9999
         versies:
           - OppervlakteVanVertrekken2024:
-              begindatum: null
+              begindatum: 01-01-2024
               einddatum: 31-12-9999
 
           - OppervlakteVanVertrekken2023:
-              begindatum: null
+              begindatum: 01-01-0001
               einddatum: 31-12-2023
 
       oppervlakte_van_overige_ruimten:
         class_naam: OppervlakteVanOverigeRuimten
-        begindatum: null
+        begindatum: 01-01-0001
         einddatum: 31-12-9999
         versies:
           - OppervlakteVanOverigeRuimten2024:
-              begindatum: null
+              begindatum: 01-01-2024
               einddatum: 31-12-9999
