--- a/taskfile.yml
+++ b/taskfile.yml
@@ -7,10 +7,13 @@ tasks:
       - |
         datamodel-codegen \
           --url https://raw.githubusercontent.com/Aedes-datastandaarden/vera-openapi/main/docs/Ketenprocessen/BVG.yaml \
+          --input-file-type openapi \
           --output woningwaardering/vera/bvg/generated.py \
           --output-model-type pydantic_v2.BaseModel \
           --use-standard-collections \
+          --use-default-kwarg \
           --target-python-version 3.10 \
+          --use-field-description \
           --use-schema-description \
           --snake-case-field \
           --disable-timestamp \
