--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,11 @@ test = [
     "ruff==0.3.*",
     "pytest==8.0.*",
     "types-requests==2.*",
+    "deepdiff==6.7.*",
 ]
 dev = [
+    "woningwaardering[test]",
     "datamodel-code-generator[http]==0.25.5",
-    "pre-commit==3.3.*",
-    "ruff==0.3.*",
-    "pytest==8.0.*",
     "unidecode==1.*",
     "jinja2==3.*",
-    "types-pyyaml==6.*",
-    "PyYAML==6.*"
 ]
