--- a/taskfile.yml
+++ b/taskfile.yml
@@ -22,7 +22,9 @@ tasks:
           --field-constraints \
           --allow-population-by-field-name \
           --strict-nullable \
-          --use-title-as-name
+          --use-title-as-name \
+          --additional-imports woningwaardering.vera.bvg.model_uitbreidingen.eenheden_ruimte._EenhedenRuimte
+      - python scripts/uitbreiden_vera_modellen.py
   genereer-vera-referentiedata:
     desc: Genereer VERA referentiedata
     cmds:
