--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,6 +58,7 @@ repos:
             unidecode==1.*,
             PyYAML==6.*,
             types-pyyaml==6.*,
+            libcst==1.*,
           ]
         description: "Mypy is an optional static type checker for Python."
         args:
