--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,6 @@ dev = [
     "jinja2==3.*",
     "types-pyyaml==6.*",
     "PyYAML==6.*",
-    "libcst==1.*"
+    "libcst==1.*",
+    "requests==2.31.*"
 ]
