--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,5 +46,6 @@ dev = [
     "types-pyyaml==6.*",
     "PyYAML==6.*",
     "libcst==1.*",
-    "requests==2.31.*"
+    "requests==2.31.*",
+    "inquirer==3.*",
 ]
