--- a/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
+++ b/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
@@ -1,15 +1,15 @@
 stelsel: zelfstandige_woonruimten
-begindatum: !!timestamp 2024-01-01
+begindatum: 2024-01-01
 stelselgroepen:
   oppervlakte_van_vertrekken:
     class_naam: OppervlakteVanVertrekken
-    begindatum: !!timestamp 2024-01-01
+    begindatum: 2024-01-01
     versies:
       - class_naam: OppervlakteVanVertrekken2024
-        begindatum: !!timestamp 2024-01-01
+        begindatum: 2024-01-01
   oppervlakte_van_overige_ruimten:
     class_naam: OppervlakteVanOverigeRuimten
-    begindatum: !!timestamp 2024-01-01
+    begindatum: 2024-01-01
     versies:
       - class_naam: OppervlakteVanOverigeRuimten2024
-        begindatum: !!timestamp 2024-01-01
+        begindatum: 2024-01-01
