Gebruik jaren ipv weken

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,6 +60,7 @@ repos:
             PyYAML==6.*,
             types-pyyaml==6.*,
             libcst==1.*,
+            types-python-dateutil==2.*,
           ]
         description: "Mypy is an optional static type checker for Python."
         args:
