--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ test = [
     "ruff==0.3.*",
     "pytest==8.0.*",
     "types-requests==2.*",
+    "types-python-dateutil==2.*",
 ]
 dev = [
     "woningwaardering[test]",
