pandas toegevoegd zonder typo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dependencies = [
     "loguru==0.7.*",
     "types-pyyaml==6.*",
     "PyYAML==6.*",
-    "prettytable==3.*"
-    "pandas==2.*",
+    "prettytable==3.*",
+    "pandas==2.*"
 ]
 
 [tool.setuptools.packages.find]
