Chore branch toevoegen aan config tbv testen

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -2,7 +2,7 @@ name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
 on:
   push:
-    branches: [main]
+    branches: [main, chore/publish-package]
 
 jobs:
   build:
