--- a/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
+++ b/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
@@ -25,3 +25,11 @@ stelselgroepen:
       - module: verwarming_2024
         class_naam: Verwarming2024
         begindatum: 2024-01-01
+  # keuken:
+  #   module: keuken
+  #   class_naam: Keuken
+  #   begindatum: 2024-01-01
+  #   versies:
+  #   - module: keuken_2024
+  #     class_naam: Keuken2024
+  #     begindatum: 2024-01-01
