--- a/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
+++ b/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
@@ -33,3 +33,11 @@ stelselgroepen:
       - module: energieprestatie_2024
         class_naam: Energieprestatie2024
         begindatum: 2024-01-01
+  keuken:
+    module: keuken
+    class_naam: Keuken
+    begindatum: 2024-01-01
+    versies:
+      - module: keuken_2024
+        class_naam: Keuken2024
+        begindatum: 2024-01-01
