--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -107,7 +107,7 @@ jobs:
           gh release create
           '${{ github.ref_name }}'
           --repo '${{ github.repository }}'
-          ${{ if github.ref_name =~ 'alpha|beta|rc' }}--prerelease{{ endif }}
+          ${{ contains(fromJSON('["alpha", "beta", "rc"]'), github.ref_name) && '--prerelease' || ''}}
           --generate-notes
           --notes-start-tag $(gh release view --repo '${{ github.repository }}' --jq .tagName --json tagName)
       - name: Upload artifact signatures to GitHub Release
