--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -89,6 +89,15 @@ jobs:
       id-token: write # IMPORTANT: mandatory for sigstore
 
     steps:
+      - name: Get latest release
+        id: latest-release
+        run: |
+          latestTagName=$(gh release view --jq .tagName --json tagName)
+          if [ "$latestTagName" == "" ]; then
+            echo "getting prerelease"
+            latestTagName=$(gh release list -L1 --json tagName --jq .[].tagName)
+          fi
+          echo "LATEST_TAG_NAME=$latestTagName" >> "$GITHUB_OUTPUT"
       - name: Download all the dists
         uses: actions/download-artifact@v4
         with:
@@ -103,13 +112,14 @@ jobs:
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          LATEST_TAG_NAME: ${{ steps.latest-release.outputs.LATEST_TAG_NAME }}
         run: >-
           gh release create
           '${{ github.ref_name }}'
           --repo '${{ github.repository }}'
           ${{ (contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc')) && '--prerelease' || ''}}
           --generate-notes
-          --notes-start-tag $(gh release view --repo '${{ github.repository }}' --jq .tagName --json tagName)
+          --notes-start-tag $TAG_NAME
       - name: Upload artifact signatures to GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
