Toevoegen --field-include-all-keys optie aan datamodel-codegen

--- a/taskfile.yml
+++ b/taskfile.yml
@@ -18,7 +18,8 @@ tasks:
           --disable-timestamp \
           --use-double-quotes \
           --allow-population-by-field-name \
-          --use-title-as-name
+          --use-title-as-name \
+          --field-include-all-keys \
       - python scripts/uitbreiden_vera_modellen.py
   genereer-vera-referentiedata:
     desc: Genereer VERA referentiedata
