--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,19 +1,16 @@
 changelog:
   exclude:
     labels:
-      - ignore-for-release-notes
+      - ignore for release notes
   categories:
     - title: Breaking Changes 💥
       labels:
-        - Semver-Major
-        - breaking-change
+        - breaking change
     - title: Nieuwe Features 🎉
       labels:
-        - Semver-Minor
         - enhancement
     - title: Bugfixes 🐛
       labels:
-        - Semver-Patch
         - bug
     - title: Documentatie 📚
       labels:
