docs toegevoegd als type branch

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,6 +4,7 @@ documentation:
       - any-glob-to-any-file:
           - docs/**
           - "**/*.md"
+  - head-branch: ["^docs", "docs"]
 enhancement:
   - head-branch: ["^feature", "feature"]
 bug:
