--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,21 @@ include = ["woningwaardering*"]
 [tool.setuptools_scm]
 version_file = "woningwaardering/_version.py"
 
+[tool.pytest.ini_options]
+addopts = "--cov=woningwaardering --cov-report term-missing --cov-report lcov:lcov.info"
+
+[tool.coverage.run]
+omit = [
+    # omit generated code
+    "woningwaardering/vera/*",
+    ]
+
 [project.optional-dependencies]
 test = [
     "pre-commit==3.3.*",
     "ruff==0.3.*",
-    "pytest==8.0.*",
+    "pytest==8.*",
+    "pytest-cov==5.*",
     "types-requests==2.*",
     "types-python-dateutil==2.*",
 ]
