--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ include = ["woningwaardering*"]
 version_file = "woningwaardering/_version.py"
 
 [tool.pytest.ini_options]
-addopts = "--cov=woningwaardering --cov-report term-missing --cov-report lcov:lcov.info"
+addopts = "--cov=woningwaardering --cov-report term --cov-report lcov:lcov.info"
 
 [tool.coverage.run]
 omit = [
