Omit generated version file from coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ addopts = "--cov=woningwaardering --cov-report term --cov-report lcov:lcov.info"
 [tool.coverage.run]
 omit = [
     # omit generated code
+    "woningwaardering/_version.py",
     "woningwaardering/vera/*",
     ]
 
