--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,7 @@ repos:
             types-pyyaml==6.*,
             libcst==1.*,
             types-python-dateutil==2.*,
+            "rdflib==7.*",
           ]
         description: "Mypy is an optional static type checker for Python."
         args:
