Toevoegen monumenten versie juli 2024

--- a/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
+++ b/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
@@ -80,6 +80,10 @@ stelselgroepen:
     class_naam: BeschermdMonumentBmz
     begindatum: 2024-01-01
     versies:
-      - module: beschermd_monument_bmz_2024
-        class_naam: BeschermdMonumentBmz2024
+      - module: beschermd_monument_bmz_jan_2024
+        class_naam: BeschermdMonumentBmzJan2024
         begindatum: 2024-01-01
+        einddatum: 2024-06-30
+      - module: beschermd_monument_bmz_jul_2024
+        class_naam: BeschermdMonumentBmzJul2024
+        begindatum: 2024-07-01
