--- a/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
+++ b/woningwaardering/stelsels/config/zelfstandige_woonruimten.yml
@@ -79,11 +79,17 @@ stelselgroepen:
     module: beschermd_monument_bmz
     class_naam: BeschermdMonumentBmz
     begindatum: 2024-01-01
+    einddatum: 2024-06-30
     versies:
       - module: beschermd_monument_bmz_jan_2024
         class_naam: BeschermdMonumentBmzJan2024
         begindatum: 2024-01-01
         einddatum: 2024-06-30
-      - module: beschermd_monument_bmz_jul_2024
-        class_naam: BeschermdMonumentBmzJul2024
+  prijsopslag_monumenten_en_nieuwbouw:
+    module: prijsopslag_monumenten_en_nieuwbouw
+    class_naam: PrijsopslagMonumentenEnNieuwbouw
+    begindatum: 2024-07-01
+    versies:
+      - module: prijsopslag_monumenten_en_nieuwbouw_jul_2024
+        class_naam: PrijsopslagMonumentenEnNieuwbouwJul2024
         begindatum: 2024-07-01
