--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,9 +3,9 @@ name: CICD
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: [main, "release/**"]
   pull_request:
-    branches: [main]
+    branches: [main, "release/**"]
 
 jobs:
   CI:
