Add requests as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "PyYAML==6.*",
     "prettytable==3.*",
     "pandas==2.*",
+    "requests==2.*",
     "SPARQLWrapper==2.*",
 ]
 
