--- a/.github/workflows/update-readme-links.yml
+++ b/.github/workflows/update-readme-links.yml
@@ -14,20 +14,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref }}
 
       - name: Get version and branch
         id: get_version
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
-          # Default to main if no specific branch is found
-          BRANCH=$(git branch -r --contains $VERSION | grep -v HEAD | sed 's/origin\///' | head -n 1 || echo "main")
+          BRANCH=$(git branch --contains ${GITHUB_SHA} | grep -v 'HEAD' | xargs)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "branch=$BRANCH" >> $GITHUB_OUTPUT
 
+      - name: Check out branch
+        run: git checkout ${{ steps.get_version.outputs.branch }}
+
       - name: Update README links
         run: |
-          # Replace ${VERSION} placeholders with actual version
           sed -i "s|\${VERSION}|${{ steps.get_version.outputs.version }}|g" README.md
 
       - name: Commit and push changes
@@ -35,17 +35,8 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
 
-          # Only commit if there are changes
           if [[ -n "$(git status --porcelain)" ]]; then
             git add README.md
             git commit -m "docs: update README links to version ${{ steps.get_version.outputs.version }}"
-            # Make sure we have a valid branch name before pushing
-            if [ -n "${{ steps.get_version.outputs.branch }}" ]; then
-              git push origin HEAD:${{ steps.get_version.outputs.branch }}
-              git tag -f ${{ steps.get_version.outputs.version }}
-              git push -f origin ${{ steps.get_version.outputs.version }}
-            else
-              echo "Error: No valid branch name found"
-              exit 1
-            fi
+            git push origin HEAD:${{ steps.get_version.outputs.branch }}
           fi
