--- a/.github/workflows/update-readme-links.yml
+++ b/.github/workflows/update-readme-links.yml
@@ -30,18 +30,22 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git fetch --all --prune
+
           BRANCH=$(git branch -r --contains ${GITHUB_SHA} | sed 's|origin/||g' | grep -v HEAD | head -n1)
 
-          # If we can’t determine the branch, fail the workflow
           if [ -z "$BRANCH" ]; then
-            echo "Error: Could not determine the branch containing commit ${GITHUB_SHA}"
-            exit 1
+              echo "Error: Could not determine the branch containing commit ${GITHUB_SHA}"
+              exit 1
           fi
+
+          BRANCH=$(echo "$BRANCH" | xargs) # trim whitespace
+          echo "Branch: '$BRANCH'"
 
           git checkout $BRANCH
 
           if [[ -n "$(git status --porcelain)" ]]; then
-            git add README.md
-            git commit -m "docs: update README links to version ${{ steps.get_version.outputs.version }}"
-            git push origin HEAD:$BRANCH
+              git add README.md
+              git commit -m "docs: update README links to version ${{ steps.get_version.outputs.version }}"
+              # Push without using HEAD:
+              git push origin $BRANCH
           fi
