publiceer branch bij release en vervang main in github urls in readme naar de release versie

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -24,6 +24,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Update README links
+        run: |
+          # Replace /tree/main/ and /blob/main/ with /tree/{VERSION}/ and /blob/{VERSION}/ respectively
+          sed -i -E 's|(@https://github.com/woonstadrotterdam/woningwaardering/)([^/]+/)?main/|\\1\\2'"${{ github.ref_name }}"'/|g' README.md
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -64,6 +68,28 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           skip-existing: true
+
+  create-release-branch:
+    name: Create release branch
+    needs:
+      - publish-to-testpypi
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # Required for pushing branches
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch all history for all branches and tags
+
+      - name: Create and push release branch
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          # Remove 'v' prefix from tag name to create branch name
+          BRANCH_NAME="release/${GITHUB_REF_NAME}"
+          git checkout -b "$BRANCH_NAME"
+          git push origin "$BRANCH_NAME"
 
   publish-to-pypi:
     name: Publish to PyPI
